# atc-drone

./: .dockerignore  .gitignore  AUDIT_MEGALIST2.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  openapi.yaml  requirements.txt
.github/workflows/: ci.yml
atc/: __init__.py  conflict_detector.py
crates/atc-blender/: Cargo.toml
crates/atc-blender/src/: client.rs  lib.rs  sync_geofences.rs  sync_tracks.rs
crates/atc-cli/: Cargo.toml
crates/atc-cli/src/: auth.rs  lib.rs
crates/atc-cli/src/sim/: client.rs  paths.rs  scenarios.rs
crates/atc-core/: Cargo.toml
crates/atc-core/src/: conflict.rs  lib.rs  models.rs  route_engine.rs  routing.rs  rules.rs  spatial.rs
crates/atc-sdk/: Cargo.toml
crates/atc-sdk/src/: client.rs  commands.rs  lib.rs  telemetry.rs
crates/atc-server/: Cargo.toml
crates/atc-server/migrations/: 001_init.sql
crates/atc-server/src/: altitude.rs  backoff.rs  blender_auth.rs  cache.rs  compliance.rs  config.rs  lib.rs  main.rs  route_planner.rs  terrain.rs
crates/atc-server/src/api/: altitude_validation.rs  auth.rs  commands.rs  daa.rs  flights.rs  geofences.rs  mod.rs  request_id.rs  routes.rs  tests.rs  ws.rs
crates/atc-server/src/loops/: blender_sync_loop.rs  conflict_loop.rs  conformance_loop.rs  flight_declaration_sync_loop.rs  geofence_sync_loop.rs  mission_loop.rs  mod.rs  operational_intent_expiry_loop.rs  rid_sync_loop.rs  telemetry_persist_loop.rs
crates/atc-server/src/persistence/: commands.rs  db.rs  drone_tokens.rs  drones.rs  flight_plans.rs  geofence_sync.rs  geofences.rs  mod.rs
crates/atc-server/src/state/: mod.rs  store.rs
crates/atc-server/tests/: conflict_test.rs  geofence_test.rs  telemetry_test.rs
data/: atc.db  geofence_sync.json
scripts/: failure_test.py  generate_token.py  load_test.py
sim/: send_multi_track.py  send_one_track.py
src/: lib.rs
src/sim/: mod.rs
tests/: test_crossing_scenario.py
