[workspace]
resolver = "2"
members = [
    "crates/atc-core",
    "crates/atc-blender", 
    "crates/atc-server",
    "crates/atc-sdk",
    "crates/atc-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Ezra Khuzadi"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# State management
dashmap = "6"

# Auth
jsonwebtoken = "9"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
atc-core = { path = "crates/atc-core" }
atc-blender = { path = "crates/atc-blender" }
atc-sdk = { path = "crates/atc-sdk" }
