[package]
name = "atc-blender"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Flight Blender API client for UTM integration"

[dependencies]
atc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
