[package]
name = "atc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tools for ATC drone system"

[[bin]]
name = "generate_token"
path = "src/bin/generate_token.rs"

[[bin]]
name = "demo_scenario"
path = "src/bin/demo_scenario.rs"

[dependencies]
atc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
clap.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
anyhow.workspace = true
atc-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
path = "src/lib.rs"
