[package]
name = "atc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core logic for ATC drone conflict detection and routing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
