[package]
name = "atc-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SDK for drone integration with ATC system"

[dependencies]
atc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
